# Week 3
 > May 20th
 - Added comments to code
 - Keyboard now closes after search button is pressed in search
 - Minor changes to StatisticActivity layout (Search view and Text View (for date) adjusted)
 - Date is altered to only show year-month-day (previously year-month-day-time)
 > May 21st
 - Refactored project to Androidx for Google Maps API capabilities
 - Added google maps activity
 - Created functionality where a country is shown in google maps when its button is clicked in the recycler view.
 > May 23rd
 - Added custom info box that displays country name and total cases
 - Added button that shows and hides the custom info box
 > Summary (Written May 24th)
 - This week every feature that has to do with covid-19 statistics is completed and some general tweaks to code were added for usability purposes. Next week will be focused on adding information and media. I hope to finish the first release of the project this week and use the last week for general editing and preparation for submission.
# Week 4
 > May 30th
 - Created info activity that has information about what COVID-19 is and how it spreads
 - Added YouTube API and added "What is Coronavirus (COVID-19)" video to info activity
 > May 31st
 - Created safety activity that has information about keeping safe during the COVID-19 pandemic
 - Added drawables to round text view corners
 - Added images to add in the safety activity
 - Updated licenses.txt
 > Summary (Written May 31st)
 - Apart from comments the app is now ready to be submitted and released. This week wasn't as busy as it was just adding design/information to two activities which wasn't difficult at all. Next week will be spent cleaning up and commenting code so it is ready to be submitted on friday the 5th.