@@ -65,7 +65,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.34"
             android:background="@color/colorAccentTwo"
-            android:drawableTop="@drawable/statistics_image"
+            android:drawableTop="@drawable/statistic_image"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:text="@string/statistics_button"
