@@ -3,8 +3,7 @@
 - covid_image_64x, CC BY-SA 3.0 license, https://www.iconfinder.com/icons/5730675/bacteria_corona_corona_virus_coronavirus_covid-19_virus_icon
 - safety_icon, free icon, https://www.iconfinder.com/icons/5932490/coronavirus_covid_mask_icon
 - safety_icon_64x. free icon, https://www.iconfinder.com/icons/5932490/coronavirus_covid_mask_icon
-- statistics_image, CC BY 3.0 license, https://www.iconfinder.com/icons/5932490/coronavirus_covid_mask_icon
-- statistics_image_64x, CC BY 3.0 license, https://www.iconfinder.com/icons/5932490/coronavirus_covid_mask_icon
+- statistics_image, CC BY 3.0 license, https://www.iconfinder.com/icons/5983500/coivid_19_coronavirus_graph_pandemic_statistic_virus_icon
 - map_icon, CC BY 3.0 license, https://www.iconfinder.com/icons/285662/map_icon
 - info_icon, CC BY-ND 3.0 license, https://www.iconfinder.com/icons/172483/info_icon
 - safety_mask, CC BY-SA 3.0 license, https://www.iconfinder.com/icons/5879304/corona_coronavirus_facemask_protection_virus_icon
